fixed layout issues and added tag image

--- a/assets/css/WEstyles.css
+++ b/assets/css/WEstyles.css
@@ -1,7 +1,10 @@
+body{
+  display: flex;
+  flex-wrap: wrap;
+}
 .section {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    width: 300px;
-    height: 300px;
+    width: 33%;
     color: white;
     background-color:#2a607c ;
     display: grid;
