--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+a,a:visited {
+    color: white;
+    text-decoration: none;
+}
 header {
     text-align: center;
     color: white; 
@@ -16,7 +20,6 @@ header {
 
 .header nav {
     text-align: left;
-    color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
     scale: border 100px 100px 100px 100px;
@@ -36,13 +39,20 @@ header nav ul li {
 
 .statement {
     width: 150px;
-    height: 220px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: left;
     color: black; 
     background: white;   
     padding: 40px;
     width: 100%;
+    display: flex;
 }
 
+.aboutMe {
+    width: 50%;
+}
 
+.me {
+    width: 50%;
+    object-fit: cover;
+}
